--- a/React/store-func/src/App.css
+++ b/React/store-func/src/App.css
@@ -131,7 +131,7 @@ h3 {
   height: 550px;
   width: 400px;
   background: #ccc;
-  background: url('./item-blue.svg');
+  background: url('../src/item-blue.jpg');
   background-size: cover;
   box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2);
   z-index: 10;
@@ -155,7 +155,7 @@ h3 {
   height:100%;
   opacity:0;
   filter: alpha(opacity=0);
-  background:url('./item-black.svg');
+  background:url('../src/item-black.jpg');
   background-size:cover;
   -webkit-transition:opacity .4s ease;
           transition:opacity .4s ease;
