--- a/React/events_state/filter/src/App.css
+++ b/React/events_state/filter/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
+ul, menu, li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#root {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  padding-top: 15px;
+}
+
+.container {
+  width: 70%;
+}
+
+#menuUL {
+  display: flex;
+  justify-content: space-around;
+  width: 42%;
+  margin-bottom: 15px;
+}
+
+#mainUl {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.menuLi {
+  border: grey 2px solid;
+  padding: 3px 13px;
+  color: grey;
+  cursor: pointer;
+}
+
+.menuLi.selected {
+  background-color: grey;
   color: white;
+  cursor: default;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+li.tovar {
+  padding: 5px;
 }
