--- a/React/events_state/layouts/src/App.css
+++ b/React/events_state/layouts/src/App.css
@@ -1,38 +1,103 @@
-.App {
-  text-align: center;
+.material-icons {
+  cursor: pointer;
+  transform: scale(2);
+  color: darkgrey;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  cursor: default;
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  -khtml-user-select: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#container {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+main {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 90%;
+  padding-top: 5%;
+}
+
+#switch {
+  margin-top: 15px;
+  right: 20px;
+  position: absolute;
+}
+
+.tovar.block {
+  width: fit-content;
+  box-shadow: 0px 4px 12px 2px #7c7c7c;
+  background-color: whitesmoke;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  width: 30%;
+  height: 300px;
+  align-items: center;
+}
+
+.tovar.block:nth-child(-n+3) {
+  margin-bottom: 35px;
+}
+
+.tovar.block .name {
+  font-size: xx-large;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+.tovar.block .color {
+  color: grey;
+}
+
+.tovar.block img.tovarImg {
+  width: 300px;
+  height: 300px;
+}
+
+.tovar.block .price {
+  color: orangered;
+  font-size: larger;
+  font-weight: 500;
+}
+
+.tovar.block .addToCartButton {
+  font-size: larger;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: orangered;
+  border: 2px orangered solid;
+  border-radius: 35px;
+  height: 45px;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  width: 65%;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.tovarImg {
+  background-size: cover;
+  background-position: center 70%;
+  background-repeat: no-repeat;
+  width: 88%;
+  height: 200px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.tovarBlockContainer {
+  display: flex;
+  width: 85%;
+  justify-content: space-around;
+  align-items: center;
+  margin-bottom: 15px;
 }
