--- a/React/events_state/layouts/src/App.css
+++ b/React/events_state/layouts/src/App.css
@@ -20,7 +20,7 @@ body {
   align-items: center;
 }
 
-main {
+main.blockStyle {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -86,7 +86,7 @@ main {
   cursor: pointer;
 }
 
-.tovarImg {
+.tovar.block .tovarImg {
   background-size: cover;
   background-position: center 70%;
   background-repeat: no-repeat;
@@ -94,10 +94,66 @@ main {
   height: 200px;
 }
 
-.tovarBlockContainer {
+.tovar.block .tovarBlockContainer {
   display: flex;
   width: 85%;
   justify-content: space-around;
   align-items: center;
   margin-bottom: 15px;
+}
+
+main.lineStyle {
+  width: 100%;
+  padding-top: 70px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.tovar.line {
+  display: flex;
+  justify-content: space-between;
+  height: 90px;
+  width: 95%;
+  align-items: center;
+  background-color: whitesmoke;
+  margin-bottom: 3px;
+}
+
+.tovar.line .tovarImg {
+  height: 85px;
+  background-position: center 75%;
+  width: 10%;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.tovar.line .addToCartButton {
+  text-transform: uppercase;
+  font-weight: 600;
+  color: orangered;
+  border: 2px orangered solid;
+  border-radius: 35px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 15%;
+  margin-right: 2%;
+  cursor: pointer;
+}
+
+.tovar.line .name {
+  font-size: larger;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+.tovar.line .color {
+  color: grey;
+}
+.tovar.line .price {
+  color: orangered;
+  font-size: larger;
+  font-weight: 500;
 }
