--- a/React/props/films/src/index.css
+++ b/React/props/films/src/index.css
@@ -1,3 +1,5 @@
+* { list-style: none; }
+.card-body-stars { display: flex; }
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
